Soft launch frontend and backend connected

--- a/Public/Account_ChangePassword.html
+++ b/Public/Account_ChangePassword.html
@@ -89,6 +89,27 @@
 
   <!-- ✅ FIXED: SCRIPT PLACED AFTER HTML CONTENT -->
   <script>
+    fetch('https://iconofgod-backend.onrender.com/api/auth/change-password', {
+    method: 'GET',
+    credentials: 'include'
+  })
+  .then(res => {
+    if (!res.ok) {
+      // Redirect to login if not authenticated
+      window.location.href = 'Login.html';
+    }
+    return res.json();
+  })
+  .then(data => {
+    // Example: Show welcome message
+    document.getElementById('welcome-heading').textContent = `Welcome, ${data.message}`;
+  })
+  .catch(err => {
+    console.error('Auth check failed:', err);
+    window.location.href = 'Login.html';
+  });
+
+
     const user = JSON.parse(localStorage.getItem("iog_user"));
     if (!user) window.location.href = "Account_Login.html";
 
@@ -111,7 +132,7 @@
       }
 
       try {
-        const res = await fetch("http://localhost:5000/api/auth/change-password", {
+        const res = await fetch("https://iconofgod-backend.onrender.com/api/auth/change-password", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ email: user.email, currentPassword, newPassword }),
