made auth.js rely on MongoDb Database

--- a/Public/Account_Edit.html
+++ b/Public/Account_Edit.html
@@ -129,3 +129,5 @@ window.addEventListener("DOMContentLoaded", async () => {
   </script>
 </body>
 </html>
+
+<!-- This hour felt like seconds. God was here. -->
